# cilqr-visualization

./: .gitignore  ARCHITECTURE_SUMMARY.md  BUILD_TEST_RESULTS.md  CONTRIBUTING.md  DIRECT_INTEGRATION.md  GITHUB_SETUP.md  LOGIC_MAPPING.md  QUICK_START.md  README.md  TRAJECTORY_SMOOTHER_INTEGRATION.md  UNIFIED_ARCHITECTURE.md  package.sh  setup_github.sh
.github/workflows/: ci.yml
algorithm/: CMakeLists.txt  OPTIMIZER_USAGE.md  TRAJECTORY_OPTIMIZER_DESIGN.md
algorithm/include/: algorithm_config.hpp  cilqr_optimizer.hpp  cilqr_solver.hpp  optimizer_factory.hpp  path_model_utils.hpp  trajectory_optimizer.hpp  types.hpp
algorithm/src/: cilqr_solver.cpp  path_model_utils.cpp
animation/: 1_build.sh  CMakeLists.txt
animation/config/: scenario_three_bend.yaml  scenario_three_straight.yaml  scenario_two_borrow.yaml  scenario_two_straight.yaml
animation/include/: cilqr_adapter.hpp  global_config.hpp  utils.hpp
animation/include/common/: algorithm_config.hpp
animation/scripts/utils/: imshow.py
animation/src/: cilqr_adapter.cpp  flags.cpp  global_config.cpp  motion_planning.cpp  utils.cpp
animation/src/common/: path_model_utils.cpp
single_frame/: 2_build.sh  CMakeLists.txt  DEBUG_TRAJECTORY_LENGTH.md  OSCILLATION_FIX.md  TRAJECTORY_LENGTH_FIX.md  TURNING_TRAJECTORY_FIX.md  cilqr_adapter_simple.cpp  cilqr_adapter_simple.h  planning_config.json  planning_test_execute.cpp  start.sh  web_visualize.py
single_frame/mock_headers/common/visualizer_event/: visualizer_event.h
single_frame/mock_headers/config/: planning_config_manager.h
single_frame/mock_headers/neodrive/common/config/: common_config.h
single_frame/mock_headers/neolix_common/util/: time_logger.h
single_frame/mock_headers/planning/planning_map/: planning_map.h
single_frame/mock_headers/reference_line/: reference_line_util.h
single_frame/mock_headers/src/common/path/: path_corridor.h  path_data.h  path_optimizer_result.h  path_point.h
single_frame/mock_headers/src/common/reference_line/: reference_line.h
single_frame/mock_headers/src/common/trajectory/: trajectory_point.h
single_frame/mock_headers/src/planning/common/: log.h  vehicle_param.h
single_frame/mock_headers/src/planning/common/data_center/: inside_planner_data.h  outside_planner_data.h
single_frame/mock_headers/src/planning/common/path/: path_point.h
single_frame/mock_headers/src/planning/common/trajectory/: publishable_trajectory.h  trajectory_point.h
single_frame/mock_headers/src/planning/math/curve1d/: spline.h
single_frame/mock_headers/src/planning/scenario_manager/: scenario_task_interface.h
single_frame/mock_headers/src/planning/task/optimizers/path_constrained_iter_lqr_planner/: path_cilqr_solver.h
single_frame/mock_headers/src/planning/task/optimizers/third_order_spline_path_optimizer/: third_order_spline_path_model.h
single_frame/mock_headers/src/planning/util/: speed_planner_common.h
single_frame/mock_headers/src/proc_ppl/optimizer/path_corridor_constructor/: heuristic_trajectory_generator.h
trajectory_smoother/: cilqr_iter_decider.cpp  cilqr_iter_decider.h  cilqr_model.cpp  cilqr_model.h  cilqr_solver.cpp  cilqr_solver.h
